# rosbag_recorder_service

./: CMakeLists.txt  README.md  package.xml
include/rosbag_recorder_service/: rosbag_recorder_service.hpp
src/: rosbag_recorder_service.cpp  rosbag_recorder_service_node.cpp
srv/: GetStatus.srv  RecordStart.srv  RecordStop.srv
